<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.MapsFragment">

    <Button
        android:id="@+id/btn_start_maps"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/start_button"
        app:layout_constraintBottom_toTopOf="@+id/sv_collections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_operation_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/operations_et_hint"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_maps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_threads_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/threads_et_hint"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_maps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_operation_number" />

    <ScrollView
        android:id="@+id/sv_collections"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_threads_number">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            app:columnCount="2"
            app:rowCount="3">

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_add_to_treeMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_add_to_hashMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_search_in_treeMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_search_in_hashMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_remove_from_treeMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

            <com.example.task2.customView.TextWithPB
                android:id="@+id/tv_remove_from_hashMap"
                android:layout_width="0dp"
                android:gravity="center"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>